--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -10,20 +10,21 @@
 }
 
 .text-hover() {
-  opacity: .6;
+  color: rgba(0,0,0,0.6);
 }
 
 .text-active() {
-  opacity: .3;
+  color: rgba(0,0,0,0.3);
 }
 
 .icon-hover() {
+  fill-opacity: 1;
   fill: @color-mint;
 }
 
 .icon-active() {
   fill: @color-mint;
-  opacity: 0.3;
+  fill-opacity: 0.3;
 }
 
 .item-hover-shadow() {
