--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,4 +1,5 @@
 .contacts {
+  position: relative;
   padding: 40px 0 39px 0;
 
   outline: 1px solid blue;
@@ -17,6 +18,24 @@
   }
 }
 
+.contacts::before {
+  position: absolute;
+  content: "";
+  width: 47px;
+  height: 82px;
+  background-image: url("../img/icon-flag.svg");
+  display: none;
+  @media (min-width: @tablet-width) {
+    display: block;
+    top: 60px;
+    right: 50px;
+  }
+  @media (min-width: @desktop-width) {
+  	top: 140px;
+    left: 120px;
+  }
+}
+
 .contacts_wrapper {
   margin-bottom: 37px;
   padding: 0 30px;
@@ -28,6 +47,7 @@
     width: 302px;
     margin-top: 56px;
     padding: 0;
+
   }
 }
 
