--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -39,6 +39,16 @@
   }
 }
 
+.page-footer__logo-icon {
+  &:hover {
+    fill: @color-mint;
+  }
+
+  &:active {
+    fill-opacity: .3;
+  }
+}
+
 .page-footer__social {
   @media (min-width: @tablet-width) {
     width: 50%;
@@ -74,35 +84,49 @@
 .page-footer__social-item {
   position: relative;
 
-  padding-right: 40px;
+  margin-right: 20px;
 
   outline: 1px solid green;
 
   .text-hidden();
+  width: 25px;
+
+  &:hover .page-footer__social-icon{
+      fill: @color-mint;
+  } 
+}
+
+.page-footer__social-link {
+  height: 100%;
+
 }
 
 .page-footer__social-icon {
   position: absolute;
 
+  &:active {
+    fill-opacity: .3;
+  }
+
   &--inst {
-    top: 13px;
-    left: -12px;
+    top: 25px;
+    left: 2px;
 
     width: 22px;
     height: 21px;
   }
 
   &--fb {
-    top: 9px;
-    left: 11px;
+    top: 20px;
+    left: 5px;
 
     width: 15px;
     height: 28px;
   }
 
   &--twit {
-    top: 14px;
-    right: -9px;
+    top: 25px;
+    right: 0px;
 
     width: 23px;
     height: 20px;
@@ -122,7 +146,14 @@
 
   text-decoration: none;
 
-  outline: 1px solid red;
+
+  &:active {
+    opacity: .3;
+  }
+
+  &:hover .page-footer__designed-icon {
+    opacity: 1;
+  }
 
   @media (min-width: @tablet-width) {
     width: 25%;
@@ -146,4 +177,15 @@
   height: 34px;
 
   fill: @color-mint;
+  opacity: .6;
+
+  @media (min-width: @tablet-width) {
+    top: 25px;
+    right: 0px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 62px;
+    right: 50px;
+  }
 }
