--- a/source/less/blocks/about-us.less
+++ b/source/less/blocks/about-us.less
@@ -1,18 +1,15 @@
 .about-us {
-  padding: 32px 30px 29px 30px;
-
-  outline: 1px solid blue;
+  padding: 33px 30px 28px 30px;
 
   @media (min-width: @tablet-width) {
-    max-width: @tablet-width;
     margin-bottom: 25px;
-    padding: 60px 50px 0 50px;
+    padding: 67px 50px 0 50px;
   }
 
   @media (min-width: @desktop-width) {
     max-width: @desktop-width;
-    margin-bottom: 30px;
-    padding: 72px 50px 0 222px;
+    margin-bottom: 27px;
+    padding: 81px 50px 0 225px;
   }
 }
 
@@ -25,8 +22,6 @@
   margin-bottom: 31px;
   padding: 0;
 
-  outline: 1px solid blue;
-
   @media (min-width: @tablet-width) {
     font-size: 43px;
     line-height: 50px;
@@ -34,7 +29,7 @@
     display: flex;
 
     margin-bottom: 50px;
-    padding-top: 7px;
+    margin-left: -4px;
 
     align-content: center;
     flex-wrap: wrap;
@@ -54,8 +49,6 @@
   font-size: 17px;
   font-weight: bold;
   line-height: 20px;
-
-  outline: 1px solid blue;
 
   .reset-list();
 
@@ -80,8 +73,6 @@
   margin: 0;
   padding-top: 56px;
   padding-bottom: 0;
-
-  outline: 1px solid blue;
 
   @media (min-width: @tablet-width) {
     width: 50%;
@@ -115,6 +106,7 @@
 
   @media (min-width: @desktop-width) {
     width: 50%;
+    padding-top: 53px;
   }
 }
 
@@ -129,6 +121,11 @@
 
     width: 32px;
     height: 37px;
+
+    @media (min-width: @tablet-width) {
+      top: -1px;
+      left: 9px;
+    }
   }
 
   &--price {
@@ -136,14 +133,24 @@
 
     width: 47px;
     height: 27px;
+
+    @media (min-width: @tablet-width) {
+      top: -1px;
+      left: 1px;
+    }
   }
 
   &--like {
-    top: 8px;
+    top: 7px;
     left: 7px;
 
     width: 34px;
     height: 27px;
+
+    @media (min-width: @tablet-width) {
+      top: 6px;
+      left: 8px;
+    }
   }
 
   &--handmade {
@@ -152,14 +159,23 @@
 
     width: 35px;
     height: 34px;
+
+    @media (min-width: @tablet-width) {
+      top: 2px;
+    }
   }
 
   &--homeland {
-    top: 7px;
-    left: -5px;
+    top: 5px;
+    left: -6px;
 
     width: 55px;
     height: 23px;
+
+    @media (min-width: @tablet-width) {
+      top: 3px;
+      left: -5px;
+    }
   }
 
   &--giftwrap {
@@ -168,5 +184,9 @@
 
     width: 33px;
     height: 32px;
+
+    @media (min-width: @tablet-width) {
+      top: 1px;
+    }
   }
 }
