--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -1,8 +1,6 @@
 .filter {
   padding: 0 30px;
 
-  outline: 2px solid green;
-
   @media (min-width: @tablet-width) {
     margin-bottom: -2px;
     padding: 0;
@@ -14,9 +12,7 @@
   line-height: 24px;
 
   margin-top: -9px;
-  margin-bottom: 26px;
-
-  outline: 1px solid green;
+  margin-bottom: 28px;
 
   @media (min-width: @tablet-width) {
     font-size: 17px;
@@ -28,13 +24,14 @@
   }
 
   @media (min-width: @desktop-width) {
+    margin-bottom: 21px;
     padding-right: 225px;
     padding-left: 225px;
   }
 }
 
 .filter__fieldset-wrapper {
-  margin-top: 10px;
+  margin-top: 11px;
 
   @media (min-width: @tablet-width) {
     height: 178px;
@@ -47,14 +44,15 @@
   position: relative;
 
   margin: 0;
-  margin-top: 9px;
+  margin-top: 11px;
   padding: 0;
-  border:none;
+
+  border: none;
   border-top: 2px solid @color-mint;
 
   &--single {
     margin-top: 0;
-    margin-bottom: 15px;
+    margin-bottom: 26px;
   }
 
 
@@ -111,9 +109,11 @@
   font-size: 17px;
   font-weight: bold;
   line-height: 16px;
+
   padding-right: 20px;
 
   text-transform: uppercase;
+
   color: @color-mint;
   @media (min-width: @tablet-width) {
     position: absolute;
@@ -139,7 +139,7 @@
   }
 
   &--single {
-    margin-top: 22px;
+    margin-top: 13px;
   }
 
   &--textarea {
@@ -200,8 +200,6 @@
   height: 69px;
   margin-bottom: 22px;
 
-  outline: 1px solid green;
-
   &--single {
     margin-bottom: 0;
   }
@@ -231,8 +229,8 @@
 
 .filter .filter__radio[type="radio"] + .filter__label::before {
   position: absolute;
-  top: -6px;
-  left: -60px;
+  top: -11px;
+  left: -62px;
 
   width: 38px;
   height: 38px;
@@ -244,9 +242,10 @@
 
   @media (min-width: @tablet-width) {
     top: -16px;
-    left: -85px;
-    width: 51px;
-    height: 51px;
+    left: -83px;
+
+    width: 49px;
+    height: 49px;
   }
 }
 
@@ -323,7 +322,7 @@
 .filter .filter__checkbox[type="checkbox"] + .filter__label::before {
   position: absolute;
   top: -11px;
-  left: -60px;
+  left: -61px;
 
   width: 38px;
   height: 38px;
@@ -333,10 +332,11 @@
   border: 2px solid @color-charcoal;
 
   @media (min-width: @tablet-width) {
-    top: -19px;
-    left: -85px;
-    width: 54px;
-    height: 54px;
+    top: -18px;
+    left: -83px;
+
+    width: 52px;
+    height: 50px;
   }
 }
 
@@ -350,13 +350,13 @@
 
 .filter .filter__checkbox[type="checkbox"]:checked + .filter__label::before {
   background-image: url("../img/icon-tick.svg");
-  background-size: 33px 22px;
   background-repeat: no-repeat;
-  background-position: 3px 7px;
+  background-position: 9px 12px;
+  background-size: 22px 16px;
 
   @media (min-width: @tablet-width) {
-    background-size: 45px 30px;
-    background-position: 5px 10px;
+    background-position: 11px 16px;
+    background-size: 33px 22px;
   }
 }
 
@@ -368,32 +368,74 @@
 
 .filter__icon {
   position: absolute;
+  top: 6px;
   right: 0;
-  top: 10px;
+  right: 7px;
+
   fill-opacity: .3;
 
   &:hover {
     fill-opacity: 1;
     fill: @color-mint;
   }
+
+  @media (min-width: @tablet-width) {
+    top: 10px;
+    right: 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    right: 5px;
+  }
 }
 
 .filter__field {
-  width: 97%;
+  width: 100%;
   height: 42px;
-  padding-left: 10px; 
+
   border: none;
   border-bottom: 2px solid @color-black;
 
+  &--textfield {
+    @media (min-width: @tablet-width) {
+      margin-top: -10px;
+      padding-left: 20px;
+    }
+  }
+
   &--single {
     position: relative;
+
     width: 96%;
 
     @media (min-width: @tablet-width) {
       width: 99%;
+      margin-top: 5px;
+      padding-left: 15px;
+
+      background-color: @color-dark-grey;
     }
   }
 }
+
+/*Можно так сделать? Автопрефиксер сам не проставляет*/
+
+.filter__field::-webkit-input-placeholder {
+  color: rgba(0, 0, 0, .3);
+}
+
+.filter__field::-moz-placeholder {
+  color: rgba(0, 0, 0, .3);/* Firefox 19+ */
+}
+
+.filter__field:-moz-placeholder {
+  color: rgba(0, 0, 0, .3);/* Firefox 18- */
+}
+
+.filter__field:-ms-input-placeholder {
+  color: rgba(0, 0, 0, .3);
+}
+/*------------------------------------------------------*/
 
 .filter__input-item--single {
   height: 52px;
@@ -414,9 +456,9 @@
   }
 }
 
-.filter__input-list--textarea .filter__input-item {
+.filter__input-item--textarea {
   height: 140px;
-  margin-bottom: 13px;
+  margin-bottom: 15px;
   @media (min-width: @tablet-width) {
     margin-bottom: 10px;
   }
@@ -427,10 +469,11 @@
 }
 
 .filter__textarea {
-  width: 96%;
-  height: 100%;
+  width: 245px;
+  height: 126px;
   padding: 0;
-  padding-left: 10px;
+  padding-top: 13px;
+  padding-left: 14px;
 
   border-color: @color-black;
   &:hover {
@@ -439,6 +482,7 @@
 
   @media (min-width: @tablet-width) {
     width: 99%;
+    height: 128px;
   }
 }
 
@@ -447,6 +491,12 @@
 
   margin-right: 40px;
   margin-bottom: 5px;
+
+  &--textfield {
+    @media (min-width: @tablet-width) {
+      margin-right: 24px;
+    }
+  }
 }
 
 .filter__btn-note {
