--- a/source/less/blocks/hit-product.less
+++ b/source/less/blocks/hit-product.less
@@ -3,8 +3,6 @@
 
   text-align: left;
 
-  outline: 1px solid red;
-
   @media (min-width: @tablet-width) {
     padding-bottom: 50px;
   }
@@ -27,6 +25,7 @@
     width: 100%;
     margin-top: 47px;
     margin-bottom: 49px;
+    margin-left: -3px;
 
     justify-content: space-between;
     align-items: stretch;
@@ -34,6 +33,8 @@
 
   @media (min-width: @desktop-width) {
     flex-direction: row-reverse;
+
+    margin-top: 44px;
 
     justify-content: flex-end;
   }
@@ -47,8 +48,6 @@
   margin-top: 26px;
   margin-bottom: 0;
   padding: 0;
-
-  outline: 1px solid red;
 
   @media (min-width: @tablet-width) {
     font-size: 43px;
@@ -73,13 +72,12 @@
   line-height: 20px;
 
   margin: 0;
-  padding-top: 4px;
-  padding-bottom: 26px;
+  padding-top: 6px;
+  padding-bottom: 22px;
 
   text-transform: uppercase;
 
   color: rgb(99, 209, 187);
-  outline: 1px solid red;
 
   @media (min-width: @tablet-width) {
     line-height: 17px;
@@ -93,9 +91,9 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-right: 31px;
-    margin-left: 22px;
-    padding-top: 14px;
+    margin-right: 29px;
+    margin-left: 25px;
+    padding-top: 15px;
   }
 }
 
@@ -117,8 +115,6 @@
   margin: 0;
   margin-bottom: 17px;
 
-  outline: 1px solid red;
-
   @media (min-width: @tablet-width) {
     font-size: 17px;
     line-height: 30px;
@@ -131,7 +127,7 @@
     font-size: 17px;
     line-height: 30px;
 
-    margin-bottom: 45px;
+    margin-bottom: 48px;
     padding: 0;
   }
 }
@@ -142,8 +138,6 @@
 
   margin-bottom: 30px;
 
-  outline: 1px solid red;
-
   .reset-list();
 
   @media (min-width: @tablet-width) {
@@ -151,7 +145,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 112px;
+    margin-bottom: 110px;
   }
 }
 
@@ -159,8 +153,6 @@
   display: flex;
 
   padding: 10px 0;
-
-  outline: 1px solid red;
 }
 
 .hit-product__spec-name {
@@ -171,7 +163,6 @@
   margin-top: 29px;
   margin-bottom: 22px;
 
-  outline: 1px solid red;
   background-color: @color-dark-grey;
 
   @media (min-width: @tablet-width) {
@@ -212,13 +203,12 @@
   text-align: center;
 
   color: rgb(68, 68, 68);
-  outline: 1px solid red;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 24px;
 
-    margin: 0 0 35px 0;
+    margin: 0 0 34px 0;
   }
 }
 
