--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -1,10 +1,10 @@
 .logo {
+  position: relative;
+
   width: auto;
   height: 79px;
 
   text-align: center;
-
-  outline: 1px solid green;
 
   @media (min-width: @tablet-width) {
     width: 320px;
@@ -14,6 +14,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    width: 323px;
     height: 88px;
 
     text-align: center;
@@ -34,6 +35,14 @@
   padding: 22px 0;
 
   @media (min-width: @tablet-width) {
+    position: absolute;
+    top: 20px;
+    left: 0;
+
     padding: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
   }
 }
