--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,7 +1,12 @@
 .modal {
+  z-index: 3000;
+
+  display: none;
+
   padding: 36px 30px 46px 30px;
 
   border: 1px solid rgb(199, 199, 199);
+  background-color: @color-white;
   box-shadow: 0 10px 10px -10px rgb(198, 198, 198);
 
   @media (min-width: @tablet-width) {
@@ -81,11 +86,86 @@
 .modal__add {
   margin: 0 auto;
 
-  color: rgb(255, 255, 255);
+  color: @color-white;
   border: none;
   background-color: rgb(99, 209, 187);
 
   @media (min-width: @tablet-width) {
     width: 100%;
   }
+}
+
+.modal_overlay {
+  position: fixed;
+  z-index: 1500;
+  top: 0;
+  left: 0;
+
+  display: none;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0,0,0,.5);
+}
+
+.modal_show {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+
+  display: block;
+
+  transform: translate(-50%, -50%);
+  animation-name: anim-open;
+  animation-duration: .4s;
+
+  animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes anim-open {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes anim-open {
+  0% {
+    transform: scale3d(0, 0, 1);
+
+    opacity: 0;
+  }
+  100% {
+    transform: scale3d(1, 1, 1);
+
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes anim-close {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes anim-close {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale3d(.5, .5, 1);
+
+    opacity: 0;
+  }
+}
+
+
+.modal_overlay_show {
+  display: block;
 }
