--- a/source/less/blocks/opinions.less
+++ b/source/less/blocks/opinions.less
@@ -2,8 +2,6 @@
   padding: 0 30px;
   padding-bottom: 45px;
 
-  outline: 1px solid orange;
-
   @media (min-width: @tablet-width) {
     position: relative;
 
@@ -35,8 +33,6 @@
 
   margin: 0 0 22px 0;
 
-  outline: 1px solid orange;
-
   @media (min-width: @tablet-width) {
     font-size: 43px;
     font-weight: bold;
@@ -44,6 +40,7 @@
 
     margin-top: 77px;
     margin-bottom: 32px;
+    margin-left: -5px;
   }
 
   @media (min-width: @desktop-width) {
@@ -52,6 +49,7 @@
 
     margin-top: 73px;
     margin-bottom: 0;
+    margin-left: 0;
   }
 }
 
@@ -70,8 +68,6 @@
 }
 
 .opinions__list {
-  outline: 1px solid orange;
-
   @media (min-width: @tablet-width) {
     order: 2;
   }
@@ -79,8 +75,6 @@
 
 .opinions__item {
   margin: 0;
-
-  outline: 1px solid orange;
 }
 
 .opinions__text {
@@ -110,8 +104,6 @@
 
   margin: 0 0 10px 0;
 
-  outline: 1px solid orange;
-
   @media (min-width: @desktop-width) {
     margin-left: 3px;
   }
@@ -122,7 +114,6 @@
 
   margin: 0 0 37px 0;
 
-  outline: 1px solid orange;
   @media (min-width: @desktop-width) {
     padding-bottom: 18px;
   }
@@ -134,8 +125,6 @@
   width: 260px;
   height: 52px;
   margin-bottom: 37px;
-
-  outline: 1px solid orange;
 
   @media (min-width: @tablet-width) {
     position: absolute;
@@ -156,8 +145,7 @@
 
   cursor: pointer;
 
-  border-color: transparent;
-  outline: 1px solid orange;
+  border: 1px solid @color-rum-swizzle;
   background-color: transparent;
   background-repeat: no-repeat;
 
@@ -168,6 +156,10 @@
   &:active {
     opacity: .3;
   }
+
+  @media(min-width: @tablet-width) {
+    border: none;
+  }
 }
 
 .opinions__prev-item {
@@ -175,11 +167,11 @@
   background-position: 37px 10px;
 
   @media(min-width: @tablet-width) {
-    background-position: 52px 0;
+    background-position: 54px 2px;
   }
 
   @media(min-width: @desktop-width) {
-    background-position: 51px 0;
+    background-position: 54px 0;
   }
 }
 
@@ -188,7 +180,7 @@
   background-position: 37px 10px;
 
   @media(min-width: @tablet-width) {
-    background-position: 10px 0;
+    background-position: 10px 2px;
   }
 
   @media(min-width: @desktop-width) {
