--- a/source/less/blocks/work-process.less
+++ b/source/less/blocks/work-process.less
@@ -2,8 +2,6 @@
   margin-bottom: 60px;
   padding-bottom: 30px;
 
-  outline: 2px solid blue;
-
   &:hover {
     .item-hover-shadow();
   }
@@ -22,6 +20,8 @@
     margin-bottom: 107px;
     padding-bottom: 0;
 
+    border: 1px solid @color-rum-swizzle;
+
     flex-wrap: wrap;
   }
 }
@@ -36,8 +36,6 @@
   margin: 0;
   padding: 25px 0 25px 90px;
 
-  outline: 1px solid blue;
-
   @media (min-width: @tablet-width) {
     font-size: 20px;
 
@@ -48,7 +46,7 @@
     width: 230px;
     height: 60px;
     margin-top: 47px;
-    padding: 50px 0 8px 78px;
+    padding: 50px 0 8px 76px;
   }
 }
 
@@ -61,6 +59,11 @@
   height: 32px;
 
   fill: @color-mint;
+
+  @media (min-width: @desktop-width) {
+    top: -3px;
+    left: 75px;
+  }
 }
 
 .work-process__img-video {
@@ -68,8 +71,6 @@
 
   width: 100%;
   height: 150px;
-
-  outline: 1px solid blue;
 
   &:hover::before {
     transform: scale(1.2);
@@ -121,8 +122,6 @@
   margin: 0;
   padding: 26px 35px;
 
-  outline: 1px solid blue;
-
   @media (min-width: @tablet-width) {
     font-size: 15px;
     line-height: 30px;
@@ -132,7 +131,7 @@
 
   @media (min-width: @desktop-width) {
     width: 250px;
-    padding: 13px 35px 46px 78px;
+    padding: 13px 35px 46px 76px;
   }
 }
 
@@ -151,6 +150,6 @@
 
   @media (min-width: @desktop-width) {
     width: 230px;
-    margin-left: 80px;
+    margin-left: 76px;
   }
 }
