--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -26,12 +26,14 @@
   content: "";
 
   background-image: url("../img/icon-flag.svg");
+
   @media (min-width: @tablet-width) {
     top: 61px;
     right: 53px;
 
     display: block;
   }
+
   @media (min-width: @desktop-width) {
     top: 131px;
     left: 114px;
@@ -41,10 +43,12 @@
 .contacts_wrapper {
   margin-bottom: 37px;
   padding: 0 30px;
+
   @media (min-width: @tablet-width) {
     margin-bottom: 57px;
     padding: 0 50px;
   }
+
   @media (min-width: @desktop-width) {
     width: 302px;
     margin-top: 56px;
@@ -143,9 +147,10 @@
     }
 
     &:active {
-      opacity: .3;
+      opacity: 0.3;
     }
   }
+
   @media (min-width: @desktop-width) {
     padding-top: 0;
   }
