--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -46,7 +46,7 @@
   }
 
   &:active {
-    fill-opacity: .3;
+    fill-opacity: 0.3;
   }
 
   @media (min-width: @tablet-width) {
@@ -118,7 +118,7 @@
   position: absolute;
 
   &:active {
-    fill-opacity: .3;
+    fill-opacity: 0.3;
   }
 
   &--inst {
@@ -191,7 +191,7 @@
 
 
   &:active {
-    opacity: .3;
+    opacity: 0.3;
   }
 
   &:hover .page-footer__designed-icon {
@@ -220,7 +220,7 @@
   width: 27px;
   height: 34px;
 
-  opacity: .6;
+  opacity: 0.6;
 
   fill: @color-mint;
 
