--- a/source/less/blocks/work-process.less
+++ b/source/less/blocks/work-process.less
@@ -77,9 +77,9 @@
   }
 
   &:active::before {
-    transform: scale(.8);
+    transform: scale(0.8);
 
-    opacity: .3;
+    opacity: 0.3;
   }
 
   @media (min-width: @tablet-width) {
