--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -5,16 +5,16 @@
 }
 
 .text-hidden() {
-  font-size: 0px;
-  line-height: 0px;
+  font-size: 0;
+  line-height: 0;
 }
 
 .text-hover() {
-  color: rgba(0,0,0,0.6);
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .text-active() {
-  color: rgba(0,0,0,0.3);
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .icon-hover() {
@@ -28,9 +28,9 @@
 }
 
 .item-hover-shadow() {
-  box-shadow: 0 8px 14px rgba(0,0,0,0.1);
+  box-shadow: 0 8px 14px rgba(0, 0, 0, 0.1);
 }
 
 .item-active-shadow() {
-  box-shadow: 0 5px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
 }
