--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -103,11 +103,11 @@
   padding-bottom: 4px;
 
   &:hover {
-    opacity: .6;
+    opacity: 0.6;
   }
 
   &:active {
-    opacity: .3;
+    opacity: 0.3;
   }
 
   @media (min-width: @tablet-width) {
@@ -115,6 +115,7 @@
 
     padding-top: 25px;
   }
+
   @media (min-width: @desktop-width) {
     padding-top: 21px;
     padding-bottom: 0;
@@ -135,6 +136,7 @@
 
     flex-grow: 1;
   }
+
   @media (min-width: @desktop-width) {
     padding: 0;
     padding-top: 5px;
