--- a/source/less/blocks/good-sorts.less
+++ b/source/less/blocks/good-sorts.less
@@ -14,6 +14,7 @@
     flex-wrap: wrap;
     align-items: flex-end;
   }
+
   @media (min-width: @desktop-width) {
     margin-top: -40px;
   }
@@ -130,7 +131,7 @@
   color: @color-light-grey;
 
   &:active {
-    opacity: .3;
+    opacity: 0.3;
   }
 
   @media (min-width: @tablet-width) {
