--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -106,7 +106,7 @@
   width: 100%;
   height: 100%;
 
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal_show {
@@ -118,15 +118,16 @@
 
   transform: translate(-50%, -50%);
   animation-name: anim-open;
-  animation-duration: .4s;
+  animation-duration: 0.4s;
 
   animation-fill-mode: forwards;
 }
 
-@-webkit-keyframes anim-open {
+@keyframes anim-open {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -138,6 +139,7 @@
 
     opacity: 0;
   }
+
   100% {
     transform: scale3d(1, 1, 1);
 
@@ -145,10 +147,11 @@
   }
 }
 
-@-webkit-keyframes anim-close {
+@keyframes anim-close {
   0% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
   }
@@ -158,6 +161,7 @@
   0% {
     opacity: 1;
   }
+
   100% {
     transform: scale3d(.5, .5, 1);
 
