--- a/source/less/blocks/opinions.less
+++ b/source/less/blocks/opinions.less
@@ -150,14 +150,14 @@
   background-repeat: no-repeat;
 
   &:hover {
-    opacity: .6;
+    opacity: 0.6;
   }
 
   &:active {
-    opacity: .3;
+    opacity: 0.3;
   }
 
-  @media(min-width: @tablet-width) {
+  @media (min-width: @tablet-width) {
     border: none;
   }
 }
@@ -166,11 +166,11 @@
   background-image: url("../img/icon-left-arrow.svg");
   background-position: 37px 10px;
 
-  @media(min-width: @tablet-width) {
+  @media (min-width: @tablet-width) {
     background-position: 54px 2px;
   }
 
-  @media(min-width: @desktop-width) {
+  @media (min-width: @desktop-width) {
     background-position: 54px 0;
   }
 }
@@ -179,11 +179,11 @@
   background-image: url("../img/icon-right-arrow.svg");
   background-position: 37px 10px;
 
-  @media(min-width: @tablet-width) {
+  @media (min-width: @tablet-width) {
     background-position: 10px 2px;
   }
 
-  @media(min-width: @desktop-width) {
+  @media (min-width: @desktop-width) {
     background-position: 10px 0;
   }
 }
