--- a/source/less/general.less
+++ b/source/less/general.less
@@ -4,8 +4,10 @@
   font-weight: 400;
   font-style: normal;
 
-  src: url("../fonts/opensans.woff"),
-    url("../fonts/opensans.woff2");
+  src: local("Open Sans Regular"),
+    local("OpenSans-Regular"),
+    url("../fonts/opensans.woff2") format("woff2"),
+    url("../fonts/opensans.woff") format("woff");
 }
 
 @font-face {
@@ -13,8 +15,10 @@
   font-weight: 700;
   font-style: normal;
 
-  src: url("../fonts/opensansbold.woff"),
-    url("../fonts/opensansbold.woff2");
+  src: local("Open Sans Bold"),
+    local("OpenSans-Bold"),
+    url("../fonts/opensansbold.woff2") format("woff2"),
+    url("../fonts/opensansbold.woff") format("woff");
 }
 
 body {
