--- a/source/less/blocks/about-us.less
+++ b/source/less/blocks/about-us.less
@@ -1,5 +1,41 @@
 .about-us {
+  position: relative;
+
   padding: 33px 30px 28px 30px;
+
+  &::before {
+    position: absolute;
+    z-index: 20;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 16px;
+
+    content: "";
+
+    background-image: url("../img/bg-zigzag-line.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: 100%;
+
+    @media (min-width: @tablet-width) {
+      height: 24px;
+
+      background-repeat: repeat-x;
+      background-position: 5px 0;
+      background-size: 100%;
+    }
+
+    @media (min-width: @desktop-width) {
+      top: 0;
+      left: 50px;
+
+      width: 1050px;
+
+      background-position: 25px 0;
+    }
+  }
 
   @media (min-width: @tablet-width) {
     margin-bottom: 25px;
@@ -9,7 +45,7 @@
   @media (min-width: @desktop-width) {
     max-width: @desktop-width;
     margin-bottom: 27px;
-    padding: 81px 50px 0 225px;
+    padding: 78px 50px 0 225px;
   }
 }
 
