--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -41,7 +41,14 @@
 }
 
 .catalog__img {
-  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+}
+
+.catalog__list-img {
+  width: 100%;
+  height: 100%;
+  margin: auto;
 }
 
 .catalog__description {
