--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -169,6 +169,10 @@
   }
 }
 
+.contacts__map-item {
+  width: 100%;
+}
+
 iframe.contacts__map-item {
   position: absolute;
   top: 0;
@@ -181,8 +185,10 @@ iframe.contacts__map-item {
   }
 }
 
+
+
 .contacts__write-us {
-  margin: 37px auto 0;
+  margin: 33px auto 0;
 
   @media (min-width: @tablet-width) {
     width: 230px;
