--- a/source/less/blocks/good-sorts.less
+++ b/source/less/blocks/good-sorts.less
@@ -1,5 +1,16 @@
 .good-sorts {
-  background: @color-light-grey url("../img/hero-mobile@1x.jpg") no-repeat center -16px;
+  position: relative;
+
+  min-height: 282px;
+
+  background-image: url("../img/hero-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% -16%;
+  background-size: 580px auto;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/hero-mobile@2x.jpg");
+  }
 
   @media (min-width: @tablet-width) {
     display: flex;
@@ -8,15 +19,44 @@
     height: 740px;
     margin-top: -90px;
 
-    background: url("../img/hero-mobile@1x.jpg") 50% 0 no-repeat @color-light-grey;
+    background: url("../img/hero-tablet@1x.jpg") 50% 0 no-repeat @color-light-grey;
     background-size: cover;
 
     flex-wrap: wrap;
     align-items: flex-end;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/hero-tablet@2x.jpg");
+    }
+
+    &::after {
+      position: absolute;
+      z-index: 20;
+      bottom: -5px;
+      left: 0;
+
+      width: 100%;
+      height: 18px;
+
+      content: "";
+
+      background: url("../img/bg-zigzag-fill.svg") repeat-x 0 0;
+      background-size: 100%;
+
+      @media (min-width: @desktop-width) {
+        height: 25px;
+      }
+    }
   }
 
   @media (min-width: @desktop-width) {
     margin-top: -40px;
+
+    background-image: url("../img/hero-desktop@1x.jpg");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/hero-desktop@2x.jpg");
+    }
   }
 }
 
