--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -9,6 +9,7 @@
   @media (min-width: @tablet-width) {
     width: 320px;
     height: 90px;
+    padding-top: 0;
 
     order: -2;
   }
@@ -34,15 +35,28 @@
   margin: 0 auto;
   padding: 22px 0;
 
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   @media (min-width: @tablet-width) {
     position: absolute;
-    top: 20px;
-    left: 0;
+    top: 21px;
+    left: -2px;
 
+    width: 112px;
+    height: auto;
     padding: 0;
   }
 
   @media (min-width: @desktop-width) {
-    position: relative;
+    top: 8px;
+    left: 73px;
+
+    width: 148px;
   }
 }
