--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,15 +1,15 @@
 .modal {
   position: fixed;
   z-index: 3000;
-  height: 260px;
 
   display: none;
 
+  height: 260px;
   padding: 30px 30px 46px 30px;
 
   border: 1px solid rgb(199, 199, 199);
   background-color: @color-white;
-  box-shadow: 0px 5px 10px 0px rgb(198, 198, 198);
+  box-shadow: 0 5px 10px 0 rgb(198, 198, 198);
 
   @media (min-width: @tablet-width) {
     width: 354px;
@@ -19,13 +19,14 @@
 }
 
 .modal--show {
-  display: block;
   top: 50%;
   left: 50%;
 
-  animation-name: anim-open;
+  display: block;
+
   transform: translateX(-50%) translateY(-50%);
-  animation-duration: .4s;
+  animation-name: anim-open;
+  animation-duration: 0.4s;
 }
 
 @keyframes anim-open {
@@ -103,11 +104,12 @@
   font-size: 15px;
   font-weight: normal;
   line-height: 30px;
-  color: @color-charcoal;
 
   margin: 0 0 22px 0;
 
   text-align: center;
+
+  color: @color-charcoal;
 
   @media (min-width: @tablet-width) {
     font-size: 17px;
@@ -130,7 +132,6 @@
 
 
 .modal__size-item {
-  text-align: center;
   font-size: 17px;
   line-height: 16px;
 
@@ -138,6 +139,8 @@
   height: 52px;
   margin-right: 7px;
   margin-bottom: 31px;
+
+  text-align: center;
 
   @media (min-width: @tablet-width) {
     width: 112px;
@@ -162,8 +165,8 @@
 
 .modal__radio[type="radio"] + .modal__label::before {
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
 
   width: 78px;
   height: 48px;
@@ -179,7 +182,7 @@
 }
 
 .modal__radio[type="radio"]:hover + .modal__label::before {
-  border-color: @color-mint;
+  border-color: @color-harp;
 }
 
 .modal__radio[type="radio"]:checked + .modal__label::before {
@@ -191,10 +194,10 @@
 
 .modal__label {
   font-size: 17px;
-  line-height: 16px;
-  height: 34px;
-
   font-weight: bold;
+  line-height: 16px;
+
+  height: 34px;
   padding-top: 18px;
 }
 
