--- a/source/less/blocks/opinions.less
+++ b/source/less/blocks/opinions.less
@@ -1,10 +1,45 @@
 .opinions {
+  position: relative;
+
   padding: 0 30px;
   padding-bottom: 45px;
 
-  @media (min-width: @tablet-width) {
-    position: relative;
+  &::after {
+    position: absolute;
+    z-index: 20;
+    bottom: -15px;
+    left: 0;
 
+    width: 100%;
+    height: 16px;
+
+    content: "";
+
+    background-image: url("../img/bg-zigzag-line.svg");
+    background-repeat: repeat-x;
+    background-position: 0 0;
+    background-size: auto 40%;
+
+    @media (min-width: @tablet-width) {
+      bottom: -90px;
+
+      height: 20px;
+
+      background-repeat: repeat-x;
+      background-position: 0 0;
+      background-size: 100%;
+    }
+
+    @media (min-width: @desktop-width) {
+      bottom: 0;
+
+      height: 24px;
+
+      background-position: 25px 0;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
     display: flex;
 
     height: 458px;
@@ -12,15 +47,20 @@
     padding: 0 50px 0 50px;
 
     background: url("../img/review@1x.jpg") no-repeat;
+    background-size: 350px auto;
 
     flex-wrap: wrap;
     justify-content: space-between;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("/img/review@2x.jpg");
+    }
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 25px;
+    margin-bottom: 0;
     margin-left: 50px;
-    padding: 0 50px 68px 172px;
+    padding: 0 50px 92px 172px;
 
     align-items: flex-start;
   }
