--- a/source/less/blocks/work-process.less
+++ b/source/less/blocks/work-process.less
@@ -107,6 +107,21 @@
 
   background-image: url("../img/icon-play.svg");
   background-repeat: no-repeat;
+
+  @media (min-width: @tablet-width) {
+    top: 189px;
+    left: 284px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 190px;
+    left: 290px;
+  }
+}
+
+.video__img {
+  width: 100%;
+  height: 100%;
 }
 
 .work-process__video {
