--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,6 +1,8 @@
 @mobile-width: 320px;
 @tablet-width: 768px;
 @desktop-width: 1150px;
+@retina-dpi: 144dpi;
+@retina-dppx: 1.4dppx;
 @color-white: rgb(255, 255, 255);
 @color-light-grey: rgb(250, 250, 250);
 @color-dark-grey: rgb(241, 241, 241);
