--- a/source/less/general.less
+++ b/source/less/general.less
@@ -3,6 +3,7 @@
   font-family: "Open Sans";
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 
   src: local("Open Sans Regular"),
     local("OpenSans-Regular"),
@@ -14,6 +15,7 @@
   font-family: "Open Sans";
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 
   src: local("Open Sans Bold"),
     local("OpenSans-Bold"),
