--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -158,7 +158,7 @@
 .contacts__maps {
   position: relative;
 
-  &:after {
+  &::after {
     position: absolute;
     top: 144px;
     left: 139px;
