--- a/source/less/blocks/good-sorts.less
+++ b/source/less/blocks/good-sorts.less
@@ -1,5 +1,6 @@
 .good-sorts {
   position: relative;
+  z-index: 100;
 
   min-height: 282px;
 
@@ -14,10 +15,9 @@
 
   @media (min-width: @tablet-width) {
     display: flex;
-
-    max-width: 100%;
-    height: 740px;
-    margin-top: -90px;
+    margin-top: -94px;
+    padding-top: 154px;
+    padding-bottom: 0px;
 
     background: url("../img/hero-tablet@1x.jpg") 50% 0 no-repeat @color-light-grey;
     background-size: cover;
@@ -31,7 +31,7 @@
 
     &::after {
       position: absolute;
-      z-index: 20;
+      z-index: 200;
       bottom: -5px;
       left: 0;
 
@@ -50,7 +50,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: -40px;
+    margin-top: -44px;
+
 
     background-image: url("../img/hero-desktop@1x.jpg");
 
@@ -75,15 +76,15 @@
     line-height: 50px;
 
     width: 100%;
-    margin-bottom: 225px;
-    padding-top: 0;
+    margin-bottom: 374px;
+    padding: 0;
   }
 
   @media (min-width: @desktop-width) {
     font-size: 53px;
     line-height: 57px;
 
-    margin-bottom: 208px;
+    margin-bottom: 357px;
   }
 }
 
