--- a/source/less/blocks/good-sorts.less
+++ b/source/less/blocks/good-sorts.less
@@ -15,9 +15,10 @@
 
   @media (min-width: @tablet-width) {
     display: flex;
+
     margin-top: -94px;
     padding-top: 154px;
-    padding-bottom: 0px;
+    padding-bottom: 0;
 
     background: url("../img/hero-tablet@1x.jpg") 50% 0 no-repeat @color-light-grey;
     background-size: cover;
@@ -51,7 +52,6 @@
 
   @media (min-width: @desktop-width) {
     margin-top: -44px;
-
 
     background-image: url("../img/hero-desktop@1x.jpg");
 
