--- a/source/less/blocks/opinions.less
+++ b/source/less/blocks/opinions.less
@@ -53,7 +53,7 @@
     justify-content: space-between;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("/img/review@2x.jpg");
+      background-image: url("../img/review@2x.jpg");
     }
   }
 
