--- a/source/less/blocks/work-process.less
+++ b/source/less/blocks/work-process.less
@@ -2,6 +2,8 @@
   margin-bottom: 60px;
   padding-bottom: 30px;
 
+  border: 1px solid @color-rum-swizzle;
+
   &:hover {
     .item-hover-shadow();
   }
@@ -19,8 +21,6 @@
     max-height: 455px;
     margin-bottom: 107px;
     padding-bottom: 0;
-
-    border: 1px solid @color-rum-swizzle;
 
     flex-wrap: wrap;
   }
@@ -119,7 +119,7 @@
   }
 }
 
-.video__img {
+.work-process__video-img {
   width: 100%;
   height: 100%;
 }
