--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -79,7 +79,7 @@
 
   @media (min-width: @desktop-width) {
     width: 100%;
-    height: 196px;
+    min-height: 193px;
 
     justify-content: flex-start;
   }
