--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -9,7 +9,7 @@
 
   text-align: center;
 
-  background-color: rgb(241, 241, 241);
+  background-color: @color-dark-grey;
 
   @media (min-width: @tablet-width) {
     font-size: 43px;
@@ -21,6 +21,25 @@
     margin-bottom: 79px;
     padding-top: 94px;
     padding-bottom: 25px;
+
+    &::after {
+      position: absolute;
+      z-index: 200;
+      bottom: -5px;
+      left: 0;
+
+      width: 100%;
+      height: 18px;
+
+      content: "";
+
+      background: url("../img/bg-zigzag-fill.svg") repeat-x 0 0;
+      background-size: 100%;
+
+      @media (min-width: @desktop-width) {
+        height: 25px;
+      }
+    }
   }
 
   @media (min-width: @desktop-width) {
