--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -6,14 +6,13 @@
   @media (min-width: @tablet-width) {
     display: flex;
 
-    height: 144px;
+    min-height: 143px;
     padding: 0 50px 0;
 
     justify-content: space-between;
   }
 
   @media (min-width: @desktop-width) {
-    height: 141px;
     margin-top: 0;
     padding: 0;
 
@@ -195,7 +194,7 @@
   }
 
   &:hover .page-footer__designed-icon {
-    opacity: 1;
+    fill: @dark-mint;
   }
 
   @media (min-width: @tablet-width) {
@@ -207,7 +206,7 @@
   @media (min-width: @desktop-width) {
     width: 185px;
     height: 81px;
-    padding-top: 62px;
+    padding-top: 60px;
     padding-left: 43px;
   }
 }
@@ -220,8 +219,6 @@
   width: 27px;
   height: 34px;
 
-  opacity: 0.6;
-
   fill: @color-mint;
 
   @media (min-width: @tablet-width) {
@@ -230,7 +227,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    top: 55px;
+    top: 53px;
     right: 50px;
   }
 }
