--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -15,13 +15,15 @@
   @media (min-width: @tablet-width) {
     display: flex;
 
-    height: 332px;
+    box-sizing: border-box;
+    height: 334px;
     margin-bottom: 54px;
   }
 
   @media (min-width: @desktop-width) {
     width: 30%;
-    height: 655px;
+    min-height: 656px;
+    margin-bottom: 58px;
 
     flex-wrap: wrap;
   }
@@ -36,7 +38,7 @@
 
   @media (min-width: @desktop-width) {
     width: 100%;
-    height: 463px;
+    height: 461px;
   }
 }
 
@@ -121,10 +123,11 @@
     font-size: 20px;
 
     padding-top: 25px;
+    padding-bottom: 6px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 21px;
+    padding-top: 24px;
     padding-bottom: 0;
   }
 }
@@ -141,12 +144,14 @@
   @media (min-width: @tablet-width) {
     font-size: 15px;
 
+    padding-bottom: 20px;
+
     flex-grow: 1;
   }
 
   @media (min-width: @desktop-width) {
     padding: 0;
-    padding-top: 5px;
+    padding-top: 6px;
 
     flex-grow: 1;
   }
@@ -163,13 +168,13 @@
   border-top: 1px solid @color-rum-swizzle;
 
   @media (min-width: @tablet-width) {
-    height: 45px;
+    min-height: 45px;
     padding-top: 0;
+    padding-bottom: 24px;
   }
 
   @media (min-width: @desktop-width) {
-    height: 73px;
-    padding-top: 5px;
+    min-height: 71px;
     padding-bottom: 0;
   }
 }
@@ -186,13 +191,13 @@
   @media (min-width: @tablet-width) {
     font-size: 17px;
 
-    padding-top: 25px;
+    padding-top: 24px;
     padding-left: 5px;
   }
 
   @media (min-width: @desktop-width) {
     height: 70%;
-    padding-top: 19px;
+    padding-top: 22px;
     padding-left: 0;
   }
 }
@@ -227,6 +232,6 @@
   }
 
   @media (min-width: @tablet-width) {
-    top: 20px;
+    top: 24px;
   }
 }
