--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -12,7 +12,7 @@
   line-height: 24px;
 
   margin-top: -9px;
-  margin-bottom: 28px;
+  margin-bottom: 25px;
 
   @media (min-width: @tablet-width) {
     font-size: 17px;
@@ -31,7 +31,7 @@
 }
 
 .filter__fieldset-wrapper {
-  margin-top: 11px;
+  margin-top: 8px;
 
   @media (min-width: @tablet-width) {
     height: 178px;
@@ -75,24 +75,30 @@
 
     &--single {
       padding-top: 0;
-      padding-bottom: 18px;
+      padding-bottom: 25px;
     }
 
     &--textarea {
       padding-top: 50px;
-      padding-bottom: 45px;
+      padding-bottom: 43px;
     }
   }
 
   @media (min-width: @desktop-width) {
     padding-left: 112px;
 
+    &--textfield {
+      padding-top: 39px;
+      padding-bottom: 5px;
+    }
+
     &--checkbox {
-      padding-top: 33px;
+      padding-top: 34px;
     }
 
     &--textarea {
-      padding-bottom: 42px;
+      padding-top: 48px;
+      padding-bottom: 40px;
     }
   }
 }
@@ -110,7 +116,10 @@
   font-weight: bold;
   line-height: 16px;
 
-  padding-right: 20px;
+  display: block;
+
+  min-width: 59px;
+  padding-right: 23px;
 
   text-transform: uppercase;
 
@@ -118,14 +127,26 @@
 
   @media (min-width: @tablet-width) {
     position: absolute;
-    top: 69px;
+    top: 67px;
 
     &--radio {
       top: 52px;
     }
 
     &--single {
-      top: 18px;
+      top: 17px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 65px;
+
+    &--radio {
+      top: 52px;
+    }
+
+    &--single {
+      top: 16px;
     }
   }
 }
@@ -165,7 +186,7 @@
     &--checkbox {
       flex-direction: row;
 
-      margin-top: 16px;
+      margin-top: 17px;
 
       justify-content: space-between;
     }
@@ -342,7 +363,7 @@
 .filter__icon {
   position: absolute;
   top: 6px;
-  right: 7px;
+  right: 6px;
 
   fill-opacity: 0.3;
 
@@ -353,7 +374,7 @@
 
   @media (min-width: @tablet-width) {
     top: 10px;
-    right: 25px;
+    right: 24px;
   }
 
   @media (min-width: @desktop-width) {
@@ -378,7 +399,7 @@
   &--single {
     position: relative;
 
-    width: 96%;
+    width: 100%;
 
     @media (min-width: @tablet-width) {
       font-size: 19px;
@@ -411,7 +432,7 @@
   display: block;
 
   height: 69px;
-  margin-bottom: 22px;
+  margin-bottom: 23px;
 
   &:hover {
     .filter__icon {
@@ -445,7 +466,7 @@
 }
 
 .filter__input-item--textarea {
-  height: 140px;
+  height: 142px;
   margin-bottom: 15px;
 
   @media (min-width: @tablet-width) {
@@ -510,13 +531,14 @@
 
   margin: 0;
   padding: 0;
-  padding-bottom: 33px;
+  padding-bottom: 31px;
 
   @media (min-width: @tablet-width) {
     font-size: 17px;
     line-height: 30px;
 
     margin-top: 10px;
+    padding-bottom: 33px;
 
     order: 1;
   }
@@ -524,13 +546,13 @@
 
 .filter__sent-order {
   width: 260px;
-  margin-bottom: 53px;
+  margin-bottom: 54px;
 
   background-color: rgb(255, 255, 255);
 
   @media (min-width: @tablet-width) {
     width: 230px;
-    margin-bottom: 50px;
+    margin-bottom: 52px;
 
     background-color: rgb(255, 255, 255);
   }
