--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -2,20 +2,21 @@
   font-size: 17px;
   font-weight: bold;
   line-height: 24px;
+
   border: 1px solid @color-rum-swizzle;
 
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: row;
 
-    width: 766px;
+    min-width: 766px;
 
     align-content: flex-start;
     flex-wrap: wrap;
   }
 
   @media (min-width: @desktop-width) {
-    width: 1148px;
+    min-width: 1148px;
 
     align-content: flex-start;
   }
@@ -154,7 +155,7 @@
   @media (min-width: @tablet-width) {
     min-width: 83px;
     height: 28px;
-    padding: 31px 0;
+    padding: 30px 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -188,14 +189,14 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 31px;
+    padding-top: 30px;
   }
 }
 
 .main-nav__list--news .main-nav__item {
   @media (min-width: @desktop-width) {
     height: 24px;
-    padding-top: 19px;
+    padding-top: 18px;
     padding-bottom: 0;
   }
 }
@@ -308,6 +309,6 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 19px;
+    padding-top: 17px;
   }
 }
