--- a/source/less/blocks/opinions.less
+++ b/source/less/blocks/opinions.less
@@ -109,6 +109,8 @@
 
 .opinions__list {
   @media (min-width: @tablet-width) {
+    display: flex;
+
     order: 2;
   }
 }
@@ -123,6 +125,8 @@
 
   margin: 0 0 30px 0;
 
+  order: 4;
+
   @media (min-width: @tablet-width) {
     font-size: 17px;
     line-height: 30px;
@@ -135,6 +139,9 @@
     margin: 0;
     margin-left: 3px;
     padding-bottom: 40px;
+
+    order: 1;
+    flex-grow: 1;
   }
 }
 
@@ -153,6 +160,8 @@
   font-size: 17px;
 
   margin: 0 0 37px 0;
+
+  order: 4;
 
   @media (min-width: @desktop-width) {
     padding-bottom: 18px;
