--- a/source/less/blocks/work-process.less
+++ b/source/less/blocks/work-process.less
@@ -19,7 +19,7 @@
   @media (min-width: @desktop-width) {
     width: 100%;
     max-height: 455px;
-    margin-bottom: 107px;
+    margin-bottom: 105px;
     padding-bottom: 0;
 
     flex-wrap: wrap;
@@ -46,23 +46,28 @@
     width: 230px;
     height: 60px;
     margin-top: 47px;
-    padding: 50px 0 8px 76px;
+    padding: 50px 0 6px 76px;
   }
 }
 
 .work-process__camera-icon {
   position: absolute;
-  top: 28px;
-  left: 35px;
+  top: 31px;
+  left: 34px;
 
   width: 32px;
   height: 32px;
 
   fill: @color-mint;
 
+  @media (min-width: @tablet-width) {
+    top: 33px;
+    left: 40px;
+  }
+
   @media (min-width: @desktop-width) {
-    top: -3px;
-    left: 75px;
+    top: -4px;
+    left: 77px;
   }
 }
 
@@ -128,7 +133,16 @@
   position: absolute;
   top: 0;
   left: 0;
+
+  width: 100%;
+  height: 100%;
 }
+
+.work-process__video-link {
+  width: 100%;
+  height: 100%;
+}
+
 
 .work-process__text {
   font-size: 13px;
