--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -12,4 +12,5 @@
 @color-suva-grey: rgb(141, 141, 141);
 @color-charcoal: rgb(68, 68, 68);
 @color-mint: rgb(99, 209, 187);
+@dark-mint: rgb(70, 193, 174);
 @color-black: rgb(0, 0, 0);
