--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -159,9 +159,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    min-width: 80px;
+    min-width: 82px;
     height: 26px;
-    padding-right: 3px;
   }
 }
 
@@ -203,7 +202,8 @@
 
 .main-nav__list--services .main-nav__item:first-child {
   @media (min-width: @desktop-width) {
-    width: 179px;
+    width: 183px;
+    border-right: 1px solid @color-rum-swizzle;
   }
 }
 
@@ -223,7 +223,7 @@
 .main-nav__list--news .main-nav__item:last-child {
   @media (min-width: @desktop-width) {
     width: 156px;
-    padding-left: 36px;
+    padding-left: 39px;
   }
 }
 
