--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -3,6 +3,7 @@
 }
 
 .page-footer__wrapper {
+  padding: 0 30px;
   @media (min-width: @tablet-width) {
     display: flex;
 
@@ -72,7 +73,9 @@
 .page-footer__social-list {
   display: flex;
 
-  height: 80px;
+  height: 79px;
+  padding: 0 30px;
+  border-bottom: 1px solid @color-rum-swizzle;
 
   justify-content: center;
   .reset-list();
@@ -184,7 +187,7 @@
 
   height: 52px;
   padding-top: 28px;
-  padding-left: 69px;
+  padding-left: 39px;
 
   text-decoration: none;
 
@@ -214,7 +217,7 @@
 .page-footer__designed-icon {
   position: absolute;
   top: 22px;
-  right: 68px;
+  right: 38px;
 
   width: 27px;
   height: 34px;
