--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -75,7 +75,8 @@
 
   height: 79px;
   padding: 0 30px;
-  border-bottom: 1px solid @color-rum-swizzle;
+
+  border-bottom: 1px solid @color-grey90;
 
   justify-content: center;
   .reset-list();
@@ -230,7 +231,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    top: 53px;
+    top: 55px;
     right: 50px;
   }
 }
