--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -7,6 +7,7 @@
 @color-light-grey: rgb(250, 250, 250);
 @color-dark-grey: rgb(241, 241, 241);
 @color-rum-swizzle: rgb(236, 236, 236);
+@color-grey90: rgb(229, 229, 229);
 @color-thistle: rgb(211, 210, 210);
 @color-harp: rgb(199, 199, 199);
 @color-suva-grey: rgb(141, 141, 141);
